# tz

./: .gitignore  Makefile  README.md  docker-compose.yml
app/: .env  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
app/core/: database.py  settings.py
app/core/migrations/: env.py
app/core/migrations/versions/: 2d1644c1b28a_.py  6057d59f4e97_.py
app/endpoints/: category.py  product.py  user.py
app/models/: __init__.py  category.py  product.py  user.py
app/schemas/: category.py  product.py  user.py
app/services/: __init__.py  category.py  product.py  user.py
app/tests/: test_delete.py  test_get.py  test_post.py  test_put.py
app/utils/: exceptions.py
