[tool.poetry]
name = "app"
version = "0.1.0"
description = "Technical task"
authors = ["xorwise <xorwise@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
pydantic-settings = "^2.3.3"
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"
pytest = "^8.2.2"
httpx = "^0.27.0"
anyio = {extras = ["trio"], version = "^4.4.0"}
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
